# debian-chrpath

./: ChangeLog  ChangeLog.usermap  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  chrpath.1  chrpath.c  config.h.in  configure  configure.ac  elf.c  killrpath.c  main.c  protos.h
deb/: Makefile.am  Makefile.in  changelog  control  docs  rules
debian/: changelog  control  watch
testsuite/: Makefile.am  Makefile.in  runtest.sh
